Added lazy loading to all pictures

--- a/src/for-clients.html
+++ b/src/for-clients.html
@@ -121,7 +121,7 @@
                     <a href="#" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
-                    <img src="@img/for-clients/market.png" alt="market">
+                    <img src="@img/for-clients/market.png" alt="market" loading="lazy">
                 </div>
             </div>
             <div class="catalog__tab">
@@ -142,7 +142,7 @@
                     <a href="#" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
-                    <img src="@img/for-clients/market.png" alt="market">
+                    <img src="@img/for-clients/market.png" alt="market" loading="lazy">
                 </div>
             </div>
             <div class="catalog__tab">
@@ -163,7 +163,7 @@
                     <a href="#" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
-                    <img src="@img/for-clients/walnut-bg.png" alt="market">
+                    <img src="@img/for-clients/walnut-bg.png" alt="market" loading="lazy">
                 </div>
             </div>
             <div class="catalog__tab">
@@ -184,7 +184,7 @@
                     <a href="#" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
-                    <img src="@img/for-clients/market.png" alt="market">
+                    <img src="@img/for-clients/market.png" alt="market" loading="lazy">
                 </div>
             </div>
             <div class="catalog__tab">
@@ -205,7 +205,7 @@
                     <a href="#" class="catalog__tab-link">Написать нам</a>
                 </div>
                 <div class="catalog__tab-img">
-                    <img src="@img/for-clients/market.png" alt="market">
+                    <img src="@img/for-clients/market.png" alt="market" loading="lazy">
                 </div>
             </div>
         </div>
