--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -12,7 +12,7 @@
                             продовольственной выставке Европы SIAL Paris 2018 </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo1.png" alt="photo">
+                        <img src="@img/gallery/photo1.png" alt="photo" loading="lazy">
                     </div>
                 </div>
                 <div class="gallery__group-item">
@@ -23,7 +23,7 @@
                             продовольственной выставке Европы SIAL Paris 2018 </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo2.png" alt="photo">
+                        <img src="@img/gallery/photo2.png" alt="photo" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                         от мировых специалистов!</div>
                 </div>
                 <div class="gallery__group-img">
-                    <img src="@img/gallery/photo3.png" alt="photo">
+                    <img src="@img/gallery/photo3.png" alt="photo" loading="lazy">
                 </div>
             </div>
             <div class="gallery__container2">
@@ -50,7 +50,7 @@
                             продовольственной выставке Европы SIAL Paris 2018 </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo4.png" alt="photo">
+                        <img src="@img/gallery/photo4.png" alt="photo" loading="lazy">
                     </div>
                 </div>
                 <div class="gallery__group-item">
@@ -61,7 +61,7 @@
                             продовольственной выставке Европы SIAL Paris 2018 </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo5.png" alt="photo">
+                        <img src="@img/gallery/photo5.png" alt="photo" loading="lazy">
                     </div>
                 </div>
                 <div class="gallery__group-item">
@@ -71,7 +71,7 @@
                         </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo6.png" alt="photo">
+                        <img src="@img/gallery/photo6.png" alt="photo" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                             продовольственной выставке Европы SIAL Paris 2018 </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo2.png" alt="photo">
+                        <img src="@img/gallery/photo2.png" alt="photo" loading="lazy">
                     </div>
                 </div>
                 <div class="gallery__group-item">
@@ -95,7 +95,7 @@
                             продовольственной выставке Европы SIAL Paris 2018 </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo1.png" alt="photo">
+                        <img src="@img/gallery/photo1.png" alt="photo" loading="lazy">
                     </div>
                 </div>
             </div>
@@ -110,7 +110,7 @@
                         от мировых специалистов!</div>
                 </div>
                 <div class="gallery__group-img">
-                    <img src="@img/gallery/photo3.png" alt="photo">
+                    <img src="@img/gallery/photo3.png" alt="photo" loading="lazy">
                 </div>
             </div>
             <div class="gallery__container2 @@mod">
@@ -122,7 +122,7 @@
                             продовольственной выставке Европы SIAL Paris 2018 </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo4.png" alt="photo">
+                        <img src="@img/gallery/photo4.png" alt="photo" loading="lazy">
                     </div>
                 </div>
                 <div class="gallery__group-item">
@@ -133,7 +133,7 @@
                             продовольственной выставке Европы SIAL Paris 2018 </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo5.png" alt="photo">
+                        <img src="@img/gallery/photo5.png" alt="photo" loading="lazy">
                     </div>
                 </div>
                 <div class="gallery__group-item">
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="gallery__group-img">
-                        <img src="@img/gallery/photo6.png" alt="photo">
+                        <img src="@img/gallery/photo6.png" alt="photo" loading="lazy">
                     </div>
                 </div>
             </div>
