--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         <div class="benefits-products__group">
             <div class="benefits-products__group-item">
                 <div class="benefits-products__group-bg-img">
-                    <img src="@img/main/walnut.png" alt="walnut">
+                    <img src="@img/main/walnut.png" alt="walnut" loading="lazy">
                 </div>
                 <div class="benefits-products__img">
                     <img src="@icons/main/walnut.svg" alt="walnut">
