--- a/src/one-news.html
+++ b/src/one-news.html
@@ -29,7 +29,7 @@
                 12.04.2019
             </div>
             <div class="news__img">
-                <img src="@img/one-news/tractor.png" alt="tractor">
+                <img src="@img/one-news/tractor.png" alt="tractor" loading="lazy">
             </div>
             <div class="news__text">
                 Сельскохозяйственный обслуживающий кооператив “Орех Причерноморья” предлагает своим клиентам выгодные
@@ -73,7 +73,7 @@
                 </ul>
             </div>
             <div class="news__img">
-                <img src="@img/one-news/sapling.png" alt="sapling">
+                <img src="@img/one-news/sapling.png" alt="sapling" loading="lazy">
             </div>
             <h2 class="news__subtitle">
                 В Украине появится первое насаждение
@@ -100,7 +100,7 @@
                 <div class="aside__item-group">
                     <div class="aside__item">
                         <div class="aside__img">
-                            <img src="@img/one-news/saplings.png" alt="saplings">
+                            <img src="@img/one-news/saplings.png" alt="saplings" loading="lazy">
                         </div>
                         <div class="aside__date">
                             12.04.2019
@@ -118,7 +118,7 @@
                     </div>
                     <div class="aside__item">
                         <div class="aside__img">
-                            <img src="@img/one-news/nuts.png" alt="nuts">
+                            <img src="@img/one-news/nuts.png" alt="nuts" loading="lazy">
                         </div>
                         <div class="aside__date">
                             12.04.2019
@@ -136,7 +136,7 @@
                     </div>
                     <div class="aside__item">
                         <div class="aside__img">
-                            <img src="@img/one-news/newsman.png" alt="man">
+                            <img src="@img/one-news/newsman.png" alt="man" loading="lazy">
                         </div>
                         <div class="aside__date">
                             12.04.2019
