--- a/src/payment.html
+++ b/src/payment.html
@@ -101,7 +101,7 @@
                     </ul>
                 </div>
                 <div class="information__img">
-                    <img src="@img/payment/credit-card.png" alt="man with credit card">
+                    <img src="@img/payment/credit-card.png" alt="man with credit card" loading="lazy">
                 </div>
             </div>
             <div class="information__tab">
@@ -149,7 +149,7 @@
                     </ul>
                 </div>
                 <div class="information__img">
-                    <img src="@img/payment/credit-card.png" alt="man with credit card">
+                    <img src="@img/payment/credit-card.png" alt="man with credit card" loading="lazy">
                 </div>
             </div>
             <div class="information__tab">
@@ -197,7 +197,7 @@
                     </ul>
                 </div>
                 <div class="information__img">
-                    <img src="@img/payment/promo_bg.png" alt="man with credit card">
+                    <img src="@img/payment/promo_bg.png" alt="man with credit card" loading="lazy">
                 </div>
             </div>
         </div>
