--- a/src/news.html
+++ b/src/news.html
@@ -69,7 +69,7 @@
                     от мировых специалистов!</div>
             </div>
             <div class="news__item-img">
-                <img src="@img/gallery/photo3.png" alt="photo">
+                <img src="@img/gallery/photo3.png" alt="photo" loading="lazy">
             </div>
         </div>
         <a href="#" class="news__link">Посмотреть еще</a>
