improvements after checking with pagespeed

--- a/src/about-company.html
+++ b/src/about-company.html
@@ -15,7 +15,7 @@
     @@include('html/header.html', {})
     <section class="promo">
         <div class="promo__bg-img">
-            <img src="@img/about-company/garden.png" alt="garden" loading="lazy">
+            <img src="@img/about-company/garden.png" alt="garden">
         </div>
         <div class="promo__wrapper">
             <div class="promo__path">
@@ -72,7 +72,7 @@
     @@include('html/mini-news.html')
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
     <script src="js/script.about-manuf.js"></script>
     <script src="js/script.eco.js"></script>
     <script src="js/script.mini-news.js"></script>
