--- a/src/for-clients.html
+++ b/src/for-clients.html
@@ -15,7 +15,7 @@
     @@include('html/header.html', {})
     <section class="promo">
         <div class="promo__bg-img">
-            <img src="@img/for-clients/walnut-bg.png" alt="garden" loading="lazy">
+            <img src="@img/for-clients/walnut-bg.png" alt="garden">
         </div>
         <div class="promo__wrapper">
             <div class="promo__path">
@@ -214,7 +214,7 @@
     @@include('html/eco.html', {})
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
     <script src="js/script.eco.js"></script>
     <script src="js/script.for-client.js"></script>
 </body>
