--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     @@include('html/header.html', {})
     <section class="promo">
         <div class="promo__bg-img">
-            <img src="@img/main/garden.png" alt="garden" loading="lazy">
+            <img src="@img/main/garden.png" alt="garden">
         </div>
         <h1 class="promo__title">Орех Причерноморья</h1>
         <div class="promo__subtitle">Единственный в Украине сад совместного выращивание фундука и грецкого ореха</div>
@@ -112,7 +112,7 @@
     @@include('html/mini-news.html', {})
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
-    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
     <script src="js/script.products.js"></script>
     <script src="js/script.about-manuf.js"></script>
     <script src="js/script.eco.js"></script>
