--- a/src/payment.html
+++ b/src/payment.html
@@ -14,7 +14,7 @@
     @@include('html/header.html', {})
     <section class="promo">
         <div class="promo__bg-img">
-            <img src="@img/payment/promo_bg.png" alt="nuts" loading="lazy">
+            <img src="@img/payment/promo_bg.png" alt="nuts">
         </div>
         <div class="promo__wrapper">
             <div class="promo__path">
