Made the page layout

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -92,7 +92,7 @@
         </a>
         <ul class="footer__list">
             <li class="footer__list-item">
-                <a href="#" class="footer__list-link">Магазин</a>
+                <a href="@html/product-catalog.html" class="footer__list-link">Магазин</a>
             </li>
             <li class="footer__list-item">
                 <a href="@html/for-clients.html" class="footer__list-link">Корпоративным клиентам</a>
@@ -107,7 +107,7 @@
                 <a href="@html/news.html" class="footer__list-link">Новости и статьи</a>
             </li>
             <li class="footer__list-item">
-                <a href="#" class="footer__list-link">Галерея</a>
+                <a href="@html/gallery.html" class="footer__list-link">Галерея</a>
             </li>
         </ul>
     </div>
