--- a/src/html/header.html
+++ b/src/html/header.html
@@ -52,7 +52,7 @@
     </div>
     <div class="sidemenu__navigation">
         <ul class="sidemenu__list">
-            <li class="sidemenu__list-item"><a href="#" class="sidemenu__list-link">Магазин</a></li>
+            <li class="sidemenu__list-item"><a href="@html/product-catalog.html" class="sidemenu__list-link">Магазин</a></li>
             <li class="sidemenu__list-item"><a href="@html/about-company.html" class="sidemenu__list-link">О производстве</a></li>
             <li class="sidemenu__list-item"><a href="@html/payment.html" class="sidemenu__list-link">Оплата и доставка</a></li>
             <li class="sidemenu__list-item"><a href="@html/for-clients.html" class="sidemenu__list-link">Оптовым и корпоративным клиентам</a>
@@ -181,7 +181,7 @@
             <nav class="header__navigation">
                 <ul class="header__list">
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link">Магазин</a>
+                        <a href="@html/product-catalog.html" class="header__list-link">Магазин</a>
                     </li>
                     <li class="header__list-item">
                         <a href="@html/about-company.html" class="header__list-link">О производстве
