Checked the home page on PixelPerfect

--- a/src/html/about-manufacture.html
+++ b/src/html/about-manufacture.html
@@ -5,8 +5,8 @@
                 О производителе
             </h2>
             <div class="about-manufacturer__subtitle">
-                <span>Сельскохозяйственный обслуживающий кооператив
-                    “Орех Причерноморья”</span> выращивает смешанные сады
+                <span>Сельскохозяйственный обслуживающий кооператив <br>
+                    “Орех Причерноморья”</span> выращивает смешанные сады <br>
                 ореха грецкого с фундуком, а также ореха грецкого
                 с шиповником, на площади более 150 гектаров.
                 <br><br>
@@ -34,6 +34,9 @@
                 <div class="about-manufacturer__btn-img">
                     <img src="@icons/main/arrow-right.svg" alt="arrow-right">
                 </div>
+            </div>
+            <div class="about-manufacturer__play">
+                <img src="@icons/main/play.svg" alt="play">
             </div>
         </div>
     </div>
