--- a/src/html/mini-news.html
+++ b/src/html/mini-news.html
@@ -31,7 +31,7 @@
                     12.04.2019
                 </div>
                 <div class="mini-news__article">
-                    Центр поддержки экспорта, в студии
+                    Центр поддержки экспорта, в студии <br>
                     Павел Тулба
                 </div>
                 <div class="mini-news__subarticle">
@@ -55,8 +55,8 @@
                     12.04.2019
                 </div>
                 <div class="mini-news__article">
-                    Центр поддержки экспорта, в студии
-                    Павел Тулба
+                    В Одесской области состоялся масштабный
+                    торгово - экспортный форум
                 </div>
                 <div class="mini-news__subarticle">
                     Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов,
@@ -79,8 +79,8 @@
                     12.04.2019
                 </div>
                 <div class="mini-news__article">
-                    Центр поддержки экспорта, в студии
-                    Павел Тулба
+                    Сертификация органического
+                    производителя
                 </div>
                 <div class="mini-news__subarticle">
                     Как уже упоминал Павел Тулба, шиповник цветёт. Эта культура очень недооценена среди наших садоводов,
