--- a/src/html/products.html
+++ b/src/html/products.html
@@ -54,8 +54,8 @@
             <div class="products__buy">
                 <div class="products__price">
                     <div class="products__price-text">Цена:</div>
-                    <div class="products__price-cost">19 грн.</div>
-                    <div class="products__price-last">21 грн.</div>
+                    <div class="products__price-cost">19 <span>грн.</span></div>
+                    <div class="products__price-last">21 <span>грн.</span></div>
                 </div>
                 <button class="products__btn">
                     Купить
@@ -121,7 +121,7 @@
             <div class="products__buy">
                 <div class="products__price">
                     <div class="products__price-text">Цена:</div>
-                    <div class="products__price-cost"> от 21 грн.</div>
+                    <div class="products__price-cost"> <span>от</span> 21 <span>грн.</span></div>
                     <div class="products__price-last"></div>
                 </div>
                 <button class="products__btn">
@@ -188,7 +188,7 @@
             <div class="products__buy">
                 <div class="products__price">
                     <div class="products__price-text">Цена:</div>
-                    <div class="products__price-cost">от 21 грн.</div>
+                    <div class="products__price-cost"><span>от</span> 21 <span>грн.</span></div>
                     <div class="products__price-last"></div>
                 </div>
                 <button class="products__btn">
@@ -250,8 +250,8 @@
             <div class="products__buy">
                 <div class="products__price">
                     <div class="products__price-text">Цена:</div>
-                    <div class="products__price-cost">19 грн.</div>
-                    <div class="products__price-last">21 грн.</div>
+                    <div class="products__price-cost">19 <span>грн.</span></div>
+                    <div class="products__price-last">21 <span>грн.</span></div>
                 </div>
                 <button class="products__btn">
                     Купить
@@ -312,7 +312,7 @@
             <div class="products__buy">
                 <div class="products__price">
                     <div class="products__price-text">Цена:</div>
-                    <div class="products__price-cost">от 21 грн.</div>
+                    <div class="products__price-cost"><span>от</span> 21 <span>грн.</span></div>
                     <div class="products__price-last"></div>
                 </div>
                 <button class="products__btn">
@@ -374,7 +374,7 @@
             <div class="products__buy">
                 <div class="products__price">
                     <div class="products__price-text">Цена:</div>
-                    <div class="products__price-cost">от 21 грн.</div>
+                    <div class="products__price-cost"><span>от</span> 21 <span>грн.</span></div>
                     <div class="products__price-last"></div>
                 </div>
                 <button class="products__btn">
