--- a/src/html/about-manufacture.html
+++ b/src/html/about-manufacture.html
@@ -13,8 +13,15 @@
                 Помимо этого кооператив занимается выращиванием
                 посадочного материала, саженцов привитого и непривитого
                 грецкого ореха, фундука и шиповника.
+
+                <div class="about-manufacturer__hidden-text @@textMod">
+                    <br>
+                    Предприятие укомплектовано всей необходимой техникой <br>
+                    и оборудованием для выращивания интенсивного сада,
+                    воспроизводства саженцев в питомнике и выращивания трюфеля.
+                </div>
             </div>
-            <a href="#" class="about-manufacturer__link">Подробнее</a>
+            <a href="#" class="about-manufacturer__link @@linkMod">Подробнее</a>
         </div>
         <div class="swiper about-manufacturer__slider">
             <div class="swiper-wrapper about-manufacturer__swiper-wrapper">
