--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -8,8 +8,10 @@
                     <div class="gallery__group-side">
                         <div class="gallery__group-side-title">SIAL Paris 2018 </div>
                         <div class="gallery__group-side-subtitle">В этом Году при поддержке проекта International Trade
-                            Centre Ukraine, и финансировании правительства Швеции, мы побывали на крупнейшей
-                            продовольственной выставке Европы SIAL Paris 2018 </div>
+                            <br>
+                            Centre Ukraine, и финансировании правительства Швеции, <br> мы побывали на крупнейшей
+                            продовольственной выставке <br> Европы SIAL Paris 2018
+                        </div>
                     </div>
                     <div class="gallery__group-img">
                         <img src="@img/gallery/photo1.png" alt="photo" loading="lazy">
