--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             Перейти в магазин
         </a>
     </section>
-    @@include('html/about-manufacture.html', {})
+    @@include('html/about-manufacture.html', {textMod: ''})
     @@include('html/info.html', {})
     <section class="target">
         <div class="target__bg-img">
