--- a/src/for-clients.html
+++ b/src/for-clients.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Оптовым и корпоративным клиентам</title>
+    <title>Оптовым и корпоративным клиентам - Орех Причерноморья</title>
     @@include('html/head.html', {})
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.for-clients.min.css">
