Checked the 'Shop' page on PixelPerfect

--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery">
+<section class="gallery @@theme">
     <div class="gallery__wrapper">
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__subtitle">Кадры социальной активности компании</div>
@@ -152,6 +152,9 @@
         </div>
         <a href="@html/gallery.html" class="gallery__link">
             Смотреть всю галерею
+        </a>
+        <a href="@html/gallery.html" class="gallery__link-second">
+            Посмотреть еще
         </a>
     </div>
 </section>
