--- a/src/gallery.html
+++ b/src/gallery.html
@@ -1,17 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Галерея</title>
+    <title>Галерея - Орех Причерноморья</title>
     @@include('html/head.html', {})
     <link rel="stylesheet" href="css/style.gallery.min.css">
 </head>
+
 <body>
     @@include('html/header.html', {})
-    @@include('html/gallery.html', {})
+    <section class="promo">
+        <div class="promo__bg-img">
+            <img src="@img/gallery/promo_bg.png" alt="supling">
+        </div>
+        <div class="promo__wrapper">
+            <div class="promo__path">
+                <a href="@html/index.html" class="promo__path-link">Главная</a>
+                <img src="@icons/arrow-path.svg" alt="arrow-path">
+                Галерея
+            </div>
+            <h1 class="promo__title">Галерея</h1>
+            <div class="promo__subtitle">Кадры социальной активности компании
+            </div>
+        </div>
+    </section>
+    @@include('html/gallery.html', {theme: 'gallery_white'})
     @@include('html/footer.html', {theme: 'footer_dark'})
     @@include('html/script.html', {})
 </body>
+
 </html>
