--- a/src/product-catalog.html
+++ b/src/product-catalog.html
@@ -21,7 +21,7 @@
             <div class="promo__path">
                 <a href="@html/index.html" class="promo__path-link">Главная</a>
                 <img src="@icons/arrow-path.svg" alt="arrow-path">
-                Каталог
+                Магазин
             </div>
             <h1 class="promo__title">Каталог продукции</h1>
         </div>
@@ -92,6 +92,9 @@
             </div>
         </div>
         @@include('html/products.html', {})
+        <a href="#" class="filter__link">
+            Загрузить ещё
+        </a>
     </section>
     <section class="about-nuts">
         <div class="about-nuts__container">
@@ -151,6 +154,7 @@
     @@include('html/footer.html', {})
     @@include('html/script.html', {})
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script src="js/script.products.js"></script>
     <script src="js/script.product-catalog.js"></script>
 </body>
 
