Checked the 'Product card' page on PixelPerfect

--- a/src/product-card.html
+++ b/src/product-card.html
@@ -31,6 +31,16 @@
                             <img src="@img/item.png" alt="nuts">
                         </div>
                     </div>
+                    <div class="swiper-slide card__slide">
+                        <div class="card__img">
+                            <img src="@img/item.png" alt="nuts">
+                        </div>
+                    </div>
+                    <div class="swiper-slide card__slide">
+                        <div class="card__img">
+                            <img src="@img/item.png" alt="nuts">
+                        </div>
+                    </div>
                 </div>
                 <div class="swiper-button-prev card__btn-prev">
                     <svg width="27" height="23" viewBox="0 0 27 23" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -44,6 +54,21 @@
                         <path
                             d="M15.75 22.75L14.175 21.175L22.725 12.625H0V10.375H22.725L14.175 1.82497L15.75 0.250008L27 11.5L15.75 22.75Z"
                             fill="#337D5A" />
+                    </svg>
+                </div>
+                <div class="card__slider-img">
+                    <svg width="46" height="45" viewBox="0 0 46 45" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <ellipse cx="23.4498" cy="22.5" rx="22.4591" ry="22.5" fill="#93B474" />
+                        <g clip-path="url(#clip0_870_2)">
+                            <path
+                                d="M32.3038 30.3004L27.9402 25.9289C29.0219 24.6078 29.6738 22.9156 29.6738 21.0713C29.6738 16.8408 26.2474 13.4082 22.0246 13.4082C17.7982 13.4082 14.3755 16.8408 14.3755 21.0713C14.3755 25.3018 17.7982 28.7344 22.0246 28.7344C23.8656 28.7344 25.551 28.085 26.8697 27.0014L31.2333 31.3691C31.5296 31.666 32.0074 31.666 32.3038 31.3691C32.6001 31.076 32.6001 30.5936 32.3038 30.3004ZM22.0246 27.2092C18.6427 27.2092 15.8942 24.4557 15.8942 21.0713C15.8942 17.6869 18.6427 14.9297 22.0246 14.9297C25.4029 14.9297 28.1551 17.6869 28.1551 21.0713C28.1551 24.4557 25.4029 27.2092 22.0246 27.2092Z"
+                                fill="white" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_870_2">
+                                <rect width="18.9655" height="19" fill="white" transform="translate(13.9673 13)" />
+                            </clipPath>
+                        </defs>
                     </svg>
                 </div>
             </div>
@@ -88,7 +113,7 @@
                         Срок годности:
                     </div>
                     <div class="card__life-descr">
-                        12 месяцев, с даты расфасовки
+                        12 месяцев, с даты расфасовки <br>
                         (указана на упаковке)
                     </div>
                 </div>
@@ -160,26 +185,55 @@
                     <img src="@img/one-nut.png" alt="one nut" loading="lazy">
                 </div>
                 <div class="info__tab-wrapper">
-                    <div class="info__tab-descr">СОК "Орех Причерноморья" предлагает своим клиентам выгодные
-                        условия
-                        сорудничества. <br><br>
-                        Мы готовы рассмотреть особые
-                        условия для оптовых покупателей, с готовностью идем на встречу
-                        к любому предложению. <br><br>
-                        Особые условия подготовленны для розничных магазинов.
-                        компаний HoReCa, спорт-клубов. <br><br>
-                        Если вы заинтересованы в нашей продукции, пишите
-                        или звоните
-                        в наш главный офис, мы всегда пойдем <br>
-                        вам на встречу.
+                    <div class="info__tab-descr">
+                        <div class="info__tab-descr-first">
+                            Уже 4000 лет люди питаются ценными <a href="#">грецкими орехами</a>. Они особенно полезны
+                            послеоперационным
+                            больным,
+                            детям, кормящим, беременным женщинам. Чтобы вернуть силы, укрепить иммунитет, одолеть
+                            туберкулез, кашель;
+                            грецкий орех очищенный, отборный нужно истолочь, смешать с медом (2:1) и чайную ложку
+                            целебной
+                            смеси
+                            употреблять перед едой.
+                        </div>
+                        <div class="info__tab-descr-second">
+                            В белке грецких орехов много (15 %) аргинина. Он особенно нужен детям, больным, пожилым
+                            людям,
+                            в организме
+                            которых аминокислота плохо синтезируется. Аргинин помогает сосудам регенерировать,
+                            а всему организму –
+                            победить воспаления.
+                        </div>
+                        <div class="info__tab-list-title">
+                            Другие полезные вещества грецких орехов:
+                        </div>
+                        <ul class="info__tab-list">
+                            <li class="info__tab-list-item">Антиоксиданты защищают печень от повреждений</li>
+                            <li class="info__tab-list-item">Полифенолы не дают образоваться сосудистым тромбам</li>
+                            <li class="info__tab-list-item">Нейропротекторы улучшают работу мозга, отодвигают старость
+                            </li>
+                        </ul>
+                        <div class="info__tab-list-title">
+                            Нужно систематически есть грецкие орехи, чтобы:
+                        </div>
+                        <ul class="info__tab-list">
+                            <li class="info__tab-list-item">На 30–40 % снизить риск заболевания раком простаты</li>
+                            <li class="info__tab-list-item">На 50 % – раком молочной железы</li>
+                            <li class="info__tab-list-item">Предотвратить дегенерацию глазной макулы, а значит, улучшить
+                                зрение</li>
+                            <li class="info__tab-list-item">Отрегулировать обмен веществ, выработку инсулина; понизить
+                                количество сахара в крови</li>
+                        </ul>
                     </div>
-                    <a href="#" class="info__tab-link">Написать нам</a>
                 </div>
-
             </div>
         </div>
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
+    @@include('html/script.html', {})
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js" defer></script>
+    <script src="js/script.product-card.js"></script>
 </body>
 
 </html>
