Made an adaptive to the 'Product card' page

--- a/src/product-card.html
+++ b/src/product-card.html
@@ -228,6 +228,150 @@
                     </div>
                 </div>
             </div>
+            <div class="info__tab">
+                <div class="info__tab-img">
+                    <img src="@img/one-nut.png" alt="one nut" loading="lazy">
+                </div>
+                <div class="info__tab-wrapper">
+                    <div class="info__tab-descr">
+                        <div class="info__tab-descr-first">
+                            Уже 2000 лет люди питаются ценными <a href="#">грецкими орехами</a>. Они особенно полезны
+                            послеоперационным
+                            больным,
+                            детям, кормящим, беременным женщинам. Чтобы вернуть силы, укрепить иммунитет, одолеть
+                            туберкулез, кашель;
+                            грецкий орех очищенный, отборный нужно истолочь, смешать с медом (2:1) и чайную ложку
+                            целебной
+                            смеси
+                            употреблять перед едой.
+                        </div>
+                        <div class="info__tab-descr-second">
+                            В белке грецких орехов много (15 %) аргинина. Он особенно нужен детям, больным, пожилым
+                            людям,
+                            в организме
+                            которых аминокислота плохо синтезируется. Аргинин помогает сосудам регенерировать,
+                            а всему организму –
+                            победить воспаления.
+                        </div>
+                        <div class="info__tab-list-title">
+                            Другие полезные вещества грецких орехов:
+                        </div>
+                        <ul class="info__tab-list">
+                            <li class="info__tab-list-item">Антиоксиданты защищают печень от повреждений</li>
+                            <li class="info__tab-list-item">Полифенолы не дают образоваться сосудистым тромбам</li>
+                            <li class="info__tab-list-item">Нейропротекторы улучшают работу мозга, отодвигают старость
+                            </li>
+                        </ul>
+                        <div class="info__tab-list-title">
+                            Нужно систематически есть грецкие орехи, чтобы:
+                        </div>
+                        <ul class="info__tab-list">
+                            <li class="info__tab-list-item">На 30–40 % снизить риск заболевания раком простаты</li>
+                            <li class="info__tab-list-item">На 50 % – раком молочной железы</li>
+                            <li class="info__tab-list-item">Предотвратить дегенерацию глазной макулы, а значит, улучшить
+                                зрение</li>
+                            <li class="info__tab-list-item">Отрегулировать обмен веществ, выработку инсулина; понизить
+                                количество сахара в крови</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="info__tab">
+                <div class="info__tab-img">
+                    <img src="@img/one-nut.png" alt="one nut" loading="lazy">
+                </div>
+                <div class="info__tab-wrapper">
+                    <div class="info__tab-descr">
+                        <div class="info__tab-descr-first">
+                            Уже 3000 лет люди питаются ценными <a href="#">грецкими орехами</a>. Они особенно полезны
+                            послеоперационным
+                            больным,
+                            детям, кормящим, беременным женщинам. Чтобы вернуть силы, укрепить иммунитет, одолеть
+                            туберкулез, кашель;
+                            грецкий орех очищенный, отборный нужно истолочь, смешать с медом (2:1) и чайную ложку
+                            целебной
+                            смеси
+                            употреблять перед едой.
+                        </div>
+                        <div class="info__tab-descr-second">
+                            В белке грецких орехов много (15 %) аргинина. Он особенно нужен детям, больным, пожилым
+                            людям,
+                            в организме
+                            которых аминокислота плохо синтезируется. Аргинин помогает сосудам регенерировать,
+                            а всему организму –
+                            победить воспаления.
+                        </div>
+                        <div class="info__tab-list-title">
+                            Другие полезные вещества грецких орехов:
+                        </div>
+                        <ul class="info__tab-list">
+                            <li class="info__tab-list-item">Антиоксиданты защищают печень от повреждений</li>
+                            <li class="info__tab-list-item">Полифенолы не дают образоваться сосудистым тромбам</li>
+                            <li class="info__tab-list-item">Нейропротекторы улучшают работу мозга, отодвигают старость
+                            </li>
+                        </ul>
+                        <div class="info__tab-list-title">
+                            Нужно систематически есть грецкие орехи, чтобы:
+                        </div>
+                        <ul class="info__tab-list">
+                            <li class="info__tab-list-item">На 30–40 % снизить риск заболевания раком простаты</li>
+                            <li class="info__tab-list-item">На 50 % – раком молочной железы</li>
+                            <li class="info__tab-list-item">Предотвратить дегенерацию глазной макулы, а значит, улучшить
+                                зрение</li>
+                            <li class="info__tab-list-item">Отрегулировать обмен веществ, выработку инсулина; понизить
+                                количество сахара в крови</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="info__tab">
+                <div class="info__tab-img">
+                    <img src="@img/one-nut.png" alt="one nut" loading="lazy">
+                </div>
+                <div class="info__tab-wrapper">
+                    <div class="info__tab-descr">
+                        <div class="info__tab-descr-first">
+                            Уже 4000 лет люди питаются ценными <a href="#">грецкими орехами</a>. Они особенно полезны
+                            послеоперационным
+                            больным,
+                            детям, кормящим, беременным женщинам. Чтобы вернуть силы, укрепить иммунитет, одолеть
+                            туберкулез, кашель;
+                            грецкий орех очищенный, отборный нужно истолочь, смешать с медом (2:1) и чайную ложку
+                            целебной
+                            смеси
+                            употреблять перед едой.
+                        </div>
+                        <div class="info__tab-descr-second">
+                            В белке грецких орехов много (15 %) аргинина. Он особенно нужен детям, больным, пожилым
+                            людям,
+                            в организме
+                            которых аминокислота плохо синтезируется. Аргинин помогает сосудам регенерировать,
+                            а всему организму –
+                            победить воспаления.
+                        </div>
+                        <div class="info__tab-list-title">
+                            Другие полезные вещества грецких орехов:
+                        </div>
+                        <ul class="info__tab-list">
+                            <li class="info__tab-list-item">Антиоксиданты защищают печень от повреждений</li>
+                            <li class="info__tab-list-item">Полифенолы не дают образоваться сосудистым тромбам</li>
+                            <li class="info__tab-list-item">Нейропротекторы улучшают работу мозга, отодвигают старость
+                            </li>
+                        </ul>
+                        <div class="info__tab-list-title">
+                            Нужно систематически есть грецкие орехи, чтобы:
+                        </div>
+                        <ul class="info__tab-list">
+                            <li class="info__tab-list-item">На 30–40 % снизить риск заболевания раком простаты</li>
+                            <li class="info__tab-list-item">На 50 % – раком молочной железы</li>
+                            <li class="info__tab-list-item">Предотвратить дегенерацию глазной макулы, а значит, улучшить
+                                зрение</li>
+                            <li class="info__tab-list-item">Отрегулировать обмен веществ, выработку инсулина; понизить
+                                количество сахара в крови</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
