Added links to the path to the product card

--- a/src/html/products.html
+++ b/src/html/products.html
@@ -22,9 +22,11 @@
                 <div class="swiper-button-next products-button-next">
                     <img src="@icons/product/arrow-next.svg" alt="arrow-right">
                 </div>
-                <div class="products__search">
-                    <div class="products__search-img"><img src="@icons/loupe.svg" alt="loupe"></div>
-                </div>
+                <a href="@html/product-card.html" class="products__search">
+                    <div class="products__search-img">
+                            <img src="@icons/loupe.svg" alt="loupe">
+                    </div>
+                </a>
             </div>
             <div class="products__info">
                 <div class="products__title">Грецкий орех</div>
